# ModZero

./: .env  .env.example  .gitignore  DEMO.md  Dockerfile  README.md  cookies.txt  deny.html  deny.json  docker-compose.prod.yml  docker-compose.yml  launch.json  page3.html
app/: context_eval.py  db.py  deps.py  main.py  models.py  posture.py  schemas.py  settings.py  trust_engine.py
backend/: .env.example  Dockerfile  requirements.txt  setup.sh
client/: package-lock.json  package.json
client-app/: README.md  package-lock.json  package.json  tailwind.config.js
connector/: Dockerfile  auth.py  config.py  enroll.py  heartbeat.py  main.py  proxy_server.py  requirements.txt  sio_client.py  transport.py  wss_tunnel.py
connector_runtime/: .gitignore  Dockerfile  README.md  __init__.py  client.py  config.example.json  config.py  heartbeat.py  logging_utils.py  main.py  proxy.py  storage.py  wg.py
deploy/: .env.cloud.example  HEADSCALE.md  README.md  demo-tls.conf  docker-compose.headscale.example.yml  docker-compose.prod.yml  docker-compose.yml  setup.sh
docs/: CLOUD_DEPLOYMENT_CHECKLIST.md  CLOUD_DRY_RUN_GUIDE.md  DEMO.md  DEMO_SCRIPT.md  DEMO_VALIDATION.md  ECS_DEPLOYMENT_RUNBOOK.md  FYP_REPORT_TESTING_TEXT.md  README.md  SYSTEM_INTEGRATION_TEST_PLAN.md  TESTING_SUMMARY.md
electron-client/: README.md  package-lock.json  package.json  tsconfig.main.json  vite.config.ts
frontend/: .env.example  .env.production  (+8 more)
legacy/client/src-tauri/: Cargo.toml  tauri.conf.json
legacy/client/src-tauri/src/: api_client.rs  device_info.rs  enrollment.rs  posture.rs
(+304 files in other folders)
